fix: layout shift issue

--- a/style.scss
+++ b/style.scss
@@ -24,8 +24,8 @@
 }
 
 #app {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   display: grid;
   grid-template-rows: repeat(3, 1fr);
   justify-content: center;
